MOBI-294 - ensure pagePanel example in icemobilespring example, the header and footer don't overlap the menu - on loading the pagePanel example a css class is added to the body tag that sets a 45px padding, on any navigation or page submit, this css class is removed
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@30407 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/samples/icemobilespring/src/main/webapp/resources/style.css
+++ b/samples/icemobilespring/src/main/webapp/resources/style.css
@@ -223,3 +223,6 @@ span.mobitab {
 html.js div#tabs{
 	display: none;
 }
+.pagePanelPadding{
+	padding-top:45px;
+}
